make logs in json format